log/build_2025-04-19_05-42-06/gpio_nav_control/stderr.log
  File "/home/rasp/ros2_ws/install/gpio_nav_control/lib/python3.12/site-packages/gpio_nav_control/button_control.py", line 445
    lambda: self.finish_manual_sequence()
            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?

